--- a/manifest.json
+++ b/manifest.json
@@ -53,7 +53,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./src/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
